kubernetes/argo-cd/projects/aws/production-hm/netdata/environments/production/kubernetes-manifests/hm-netdata-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-netdata-ingress
  namespace: production-hm-netdata
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: netdata.hongbomiao.com
  labels:
    app.kubernetes.io/name: netdata
    app.kubernetes.io/part-of: production-hm-netdata
spec:
  rules:
    - host: netdata.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netdata
                port:
                  number: 19999
  tls:
    - hosts:
        - netdata.hongbomiao.com
      secretName: hm-netdata-certificate
